	gllib/arcball.cpp, Makefile.am, configure.ac: Add gllib, a set of
	useful routines for use with OpenGL.
	* src/rotation_selector.h, src/rotation_selector.cpp, src/view_area.h,
	src/view_area.cpp, src/cvlview.cpp, Makefile.am: Implement proper 3D
	rotation with 2D mouse using gllib's ArcBall class.
	* src/view_area.cpp: Only rotate when in 3D view mode.

2008-06-25  Martin Lambers <marlam@marlam.de>

	* build-aux/qt4.m4: Search Qt4 libs also in lib64. Reported by Rainer
	Bachl. Thanks!
	* TODO: Update.

2008-06-24  Martin Lambers <marlam@marlam.de>

	* configure.ac: Fix linking with libGLEW in some situations.

2008-06-17  Martin Lambers <marlam@marlam.de>

	* TODO, Makefile.am: Add TODO file.

2008-05-17  Martin Lambers <marlam@marlam.de>

	* NEWS, doc/cvlview.1, doc/cvlview.texi: Update.

2008-05-16  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Remove non-portable MH_STDIN and MH_STDOUT macros.

2008-04-28  Martin Lambers <marlam@marlam.de>

	* src/pseudocolor_selector.h, src/pseudocolor_selector.cpp,
	src/view_area.cpp: Use new invert option for pseudo coloring, to allow
	using hue values in the opposite direction.

2008-04-22  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp, src/Makefile.am: Fix computation of the used
	viewport area for "Save current view" operations.
	* configure.ac, Makefile.am: Remove unused vector/matrix lib.
	* src/scale_selector.cpp, src/translation_selector.cpp,
	src/rotation_selector.cpp: Use less space.

2008-04-21  Martin Lambers <marlam@marlam.de>

	* src/zoom_selector.h, src/zoom_selector.cpp,
	src/translation_selector.h, src/translation_selector.cpp,
	src/rotation_selector.h, src/rotation_selector.cpp,
	src/interpolation_selector.cpp, src/channel_selector.cpp,
	src/view_area.h, src/view_area.cpp, src/cvlview.h, src/cvlview.cpp,
	src/Makefile.am: Beginnings of GUI improvements. Unfinished.
	* src/color_selector.h, src/color_selector.cpp, src/scale_selector.h,
	src/scale_selector.cpp, src/translation_selector.cpp,